--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -1,49 +1,3 @@
-# name: test E2E
-# on:
-#   push:
-#     branches:
-#       - 'main'
-#   pull_request:
-# jobs:
-#   build-and-test:
-#     runs-on: ubuntu-latest
-#     name: Build and test
-#     services:
-#       mysql:
-#         image: mysql:8.0
-#         env:
-#           MYSQL_DATABASE: symfonyworkflows
-#           MYSQL_ROOT_PASSWORD: root
-#           MYSQL_PASSWORD:
-#         ports:
-#           - 3306:3306
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
-#       - name: Setup Node
-#         uses: actions/setup-node@v4
-#         with:
-#           project: ./src/
-#       - name: Setup PHP with composer v2
-#         uses: shivammathur/setup-php@v2
-#         with:
-#             php-version: '8.2.4'
-#             tools: composer:v2
-#             extensions: mbstring, intl, pdo_mysql, sodium
-#       - name: Mysql
-#         uses: shivammathur/setup-php@v2
-#       - name: env
-#         run: echo "APP_ENV = test>> .env"
-#       - name: Cypress run 
-#         uses: cypress-io/github-action@v6
-#       - name: Create database
-#         run: php bin/console doctrine:database:create
-#       - name: migration bdd
-#         run: php bin/console doctrine:migration:migrate
-#       - name: run server
-#         run: php -S 127.0.0.1:8000 -t public &
-#       - name: lunch cypress
-#         run: npm run cypress:run
 name: Symfony 7 + Cypress E2E Tests
 
 on:
@@ -57,22 +11,18 @@ jobs:
         # installation des services
         services:
             mysql:
-                image: mysql:8.0.30
+                image: mysql:8.0
                 env:
                     MYSQL_ROOT_PASSWORD: root
                     MYSQL_DATABASE: symfony
                 ports:
-                    - 3307:3307
+                    - 3306:3306
                 options: >-
                     --health-cmd="mysqladmin ping -h localhost"
                     --health-interval=10s
                     --health-timeout=5s
                     --health-retries=5
         steps:
-            - name: Wait for MySQL
-              run: sleep 10
-            - name: Check MySQL logs
-              run: docker logs $(docker ps -q --filter ancestor=mysql:8.0)
             # récupération du code du repository
             - name: Checkout code
               uses: actions/checkout@v4
@@ -91,7 +41,7 @@ jobs:
                 cp .env .env.test
                 echo "APP_ENV=test" >> .env
                 echo "APP_ENV=test" >> .env.test
-                echo "DATABASE_URL=mysql://root:root@127.0.0.1:3307/symfony?serverVersion=8.0.30&charset=utf8mb4" >> .env.test
+                echo "DATABASE_URL=mysql://root:root@127.0.0.1:3306/symfony" >> .env.test
             
             # installation des dépendances Symfony
             - name: Install PHP dependencies
